add analysis for transit/commercial

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-clean_chicago_crime.zip .part2_analysis.py.swp __pycahche__/ *.save
+clean_chicago_crime.zip 
+.part2_analysis.py.swp 
+__pycahche__/ 
+.part2_analysis.py.swo
+*.save
